# Memoirs

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0003_m3_review_log.py
backend/app/: main.py
backend/app/api/: __init__.py  app.py  deps.py  exception_handlers.py  router.py
backend/app/api/routes/: claims.py
backend/app/commands/: __init__.py  audit.py
backend/app/core/: audit.py  config.py  exceptions.py  logging.py
backend/app/db/: base.py  session.py
backend/app/extract/: __init__.py  base.py  llm.py  rule.py
backend/app/ingest/: __init__.py  text.py
backend/app/repositories/: claim.py  entity.py  review_log.py  source.py
backend/app/resolve/: __init__.py  dedup.py  embedder.py  entity.py
backend/app/schemas/: __init__.py  base.py  claim.py  review.py  utterance.py
backend/app/segment/: __init__.py  turn.py
backend/app/services/: claim.py  pipeline.py
backend/app/store/: __init__.py  audit.py  db.py  models.py  repository.py
backend/app/worker/: __init__.py
backend/tests/: conftest.py  test_api_dedup.py  test_api_review.py  test_api_supersede.py  test_append_only.py  test_audit.py  test_claim_repository.py  test_correction.py  test_dedup.py  test_embedder.py  test_entity.py  test_extraction.py  test_grounded_pipeline.py  test_merge_repository.py  test_merge_safety.py  test_offsets.py  test_provenance.py  test_review_repository.py  test_supersede_repository.py
backend/tests/fixtures/: corpus.py
(+83 files in other folders)
